--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "feedback-bot",
-  "description": "A bot to collect feedback such as customer complaints, potholes and such.",
+  "name": "emotional-bot",
+  "description": "A bot that analyses a customers emotional state",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "bundle exec ruby bot.rb",
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/green-bot/feedback-bot"
+    "url": "https://github.com/oduonye1992/emotional-bot"
   },
   "keywords": [
-    "green-bot",
+    "emotional-bot",
     "greenbot",
     "bot",
     "bashbot"
   ],
-  "author": "Gordon DuQuesnay",
+  "author": "Gordon DuQuesnay, Daniel Oduonye",
   "license": "MIT",
   "version": "0.1.1"
 }
